# Catsay

./: Makefile  README.md  pyproject.toml
cat_say/: constants.py  main.py
